--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -4,7 +4,10 @@
 <div class="row">
     <div class="col">
         <!-- SearchBox -->
-        <shared-search-box (onValue)="searchByCountry($event)" placeholder="Buscar por país"></shared-search-box>
+        <shared-search-box 
+        (onDebounce)="searchByCountry($event)" 
+        [initialValue]="initialValue"
+        placeholder="Buscar por país"></shared-search-box>
     </div>
 </div>
 
@@ -12,6 +15,8 @@
     <div class="col">
         <hr>
         <!-- Tabla de resultados -->
+        <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
+
        <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
