--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,10 +1,13 @@
-<h2>Por Rregión</h2>
+<h2>Por región</h2>
 <hr>
 
 <div class="row">
-    <div class="col">
+    <div class="col text-center">
         <!-- SearchBox -->
-        <shared-search-box (onValue)="searchByRegion($event)" placeholder="Buscar por región"></shared-search-box>
+        <button *ngFor="let region of regions" class="btn mx-2"
+            [ngClass]="{'btn-outline-primary': selectedRegion === region}" (click)="searchByRegion(region)">
+            {{region}}
+        </button>
     </div>
 </div>
 
@@ -12,6 +15,8 @@
     <div class="col">
         <hr>
         <!-- Tabla de resultados -->
-       <countries-table [countries]="countries"></countries-table>
+        <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
+
+        <countries-table [countries]="countries"></countries-table>
     </div>
 </div>
